<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>2.1.6.RELEASE</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.api</groupId>
	<artifactId>mobi-api</artifactId>
	<version>1.0.0-SNAPSHOT</version>
	<packaging>jar</packaging>
	<name>mobi-api</name>
	<description>Programming exercise</description>

	<properties>
		<java.version>1.8</java.version>
	</properties>

	<dependencies>
		<dependency> 
		    <groupId>org.springframework.boot</groupId> 
		    <artifactId>spring-boot-starter-web</artifactId> 
		</dependency>
		<dependency> 
		    <groupId>org.springframework.boot</groupId> 
		    <artifactId>spring-boot-starter-data-jpa</artifactId> 
		</dependency>
		<dependency>
		    <groupId>com.h2database</groupId>
		    <artifactId>h2</artifactId>
		    <scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
			<exclusions>
				<exclusion>
					<groupId>org.junit.vintage</groupId>
					<artifactId>junit-vintage-engine</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		<dependency>
            <groupId>org.springframework.boot</groupId>
            <artifactId>spring-boot-starter-tomcat</artifactId>
            <scope>provided</scope>
		</dependency>

       <dependency>
		    <groupId>org.jmockit</groupId>
		    <artifactId>jmockit</artifactId>
		    <version>1.8</version>
		    <scope>test</scope>
		</dependency>


        <dependency>
		  <groupId>junit</groupId>
		  <artifactId>junit</artifactId>
		  <version>4.12</version>
		  <scope>compile</scope>
		</dependency>
		<dependency>
		  <groupId>org.assertj</groupId>
		  <artifactId>assertj-core</artifactId>
		  <version>3.8.0</version>
		  <scope>compile</scope>
		</dependency>
		<dependency>
		  <groupId>org.mockito</groupId>
		  <artifactId>mockito-core</artifactId>
		  <version>2.11.0</version>
		  <scope>compile</scope>
		</dependency>
		<dependency>
		  <groupId>org.hamcrest</groupId>
		  <artifactId>hamcrest-core</artifactId>
		  <version>1.3</version>
		  <scope>compile</scope>
		</dependency>
		<dependency>
		  <groupId>org.hamcrest</groupId>
		  <artifactId>hamcrest-library</artifactId>
		  <version>1.3</version>
		  <scope>compile</scope>
		</dependency>
		<dependency>
		  <groupId>org.skyscreamer</groupId>
		  <artifactId>jsonassert</artifactId>
		  <version>1.5.0</version>
		  <scope>compile</scope>
		</dependency>
		
		<dependency>
		    <groupId>org.apache.httpcomponents</groupId>
		    <artifactId>httpclient</artifactId>
		    <version>4.3.6</version>
		</dependency>
		
		<dependency>
		    <groupId>com.googlecode.json-simple</groupId>
		    <artifactId>json-simple</artifactId>
		    <version>1.1.1</version>
		</dependency>
		
		<dependency>
	        <groupId>org.projectlombok</groupId>
	        <artifactId>lombok</artifactId>
	        <version>1.18.10</version>
	        <scope>provided</scope>
	    </dependency>
		
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
			<plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>2.9</version>
                <configuration>
                    <useFile>false</useFile>
                     <argLine>-Djdk.attach.allowAttachSelf</argLine>
                </configuration>
            </plugin>
			<plugin> 
				<artifactId>maven-resources-plugin</artifactId>     
				<executions>  
					<execution>   
						<id>copy-resources</id>    
						<phase>validate</phase> 
						<goals><goal>copy-resources</goal></goals>             
						<configuration>                                 
							<outputDirectory>${project.build.directory}/classes/static/</outputDirectory >      
							<resources>    
								<resource>       
									<directory>src/main/webapp/</directory> 
								</resource>   
							</resources>
						</configuration>        
					</execution>   
				</executions>
			</plugin>
		</plugins>
	</build>

</project>
